# Detours

./: CMakeLists.txt
samples/: CMakeLists.txt
samples/comeasy/: CMakeLists.txt  comeasy.cpp  wrotei.cpp
samples/commem/: CMakeLists.txt  commem.cpp
samples/cping/: cping.cpp
samples/disas/: CMakeLists.txt  disas.cpp
samples/dtest/: CMakeLists.txt  dtarge.cpp  dtarge.def  dtarge.h  dtest.cpp
samples/dumpe/: CMakeLists.txt  dumpe.cpp
samples/dumpi/: CMakeLists.txt  dumpi.cpp
samples/echo/: CMakeLists.txt  echofx.cpp  echofx.def  echonul.def
samples/einst/: CMakeLists.txt  edll1x.cpp  edll2x.cpp  edll3x.cpp  einst.cpp
samples/excep/: CMakeLists.txt  excep.cpp  firstexc.cpp
samples/findfunc/: CMakeLists.txt  extend.cpp  symtest.cpp  target.cpp  target.def  target.h
samples/impmunge/: CMakeLists.txt  impmunge.cpp
samples/member/: CMakeLists.txt  member.cpp
samples/opengl/: ogldet.cpp
samples/region/: CMakeLists.txt  region.cpp
samples/setdll/: setdll.cpp
samples/simple/: CMakeLists.txt  simple.cpp  simple.def
samples/slept/: CMakeLists.txt  dslept.cpp  dslept.def  sleepbed.cpp  sleepnew.cpp  sleepold.cpp  slept.cpp  slept.def  slept.h  verify.cpp
samples/syelog/: CMakeLists.txt  sltest.cpp  sltestp.cpp  syelog.cpp  syelog.h  syelogd.cpp
samples/talloc/: talloc.cpp
samples/traceapi/: CMakeLists.txt  _win32.cpp  trcapi.cpp
samples/tracebld/: CMakeLists.txt  tracebld.cpp  trcbld.cpp
samples/tracelnk/: CMakeLists.txt  trclnk.cpp
samples/tracemem/: CMakeLists.txt  trcmem.cpp  trcmem.def
samples/tracereg/: CMakeLists.txt  trcreg.cpp
samples/traceser/: CMakeLists.txt  trcser.cpp
samples/tracessl/: CMakeLists.txt  trcssl.cpp
samples/tracetcp/: CMakeLists.txt  trctcp.cpp
samples/tryman/: size.cpp  tstman.cpp
samples/withdll/: withdll.cpp
src/: CMakeLists.txt  creatwth.cpp  detours.cpp  detours.h  disasm.cpp  image.cpp  modules.cpp  uimports.cpp
