add_library(dtarge${DETOURS_BITS} SHARED dtarge.cpp dtarge.rc dtarge.def)
target_link_libraries(dtarge${DETOURS_BITS} ${DEPS})

add_executable(dtest dtest.cpp)
target_link_libraries(dtest ${DEPS} dtarge${DETOURS_BITS})
if (MSVC)
    set_target_properties(dtest PROPERTIES LINK_FLAGS "/entry:WinMainCRTStartup")
else()
    set_target_properties(dtest PROPERTIES LINK_FLAGS "-eWinMainCRTStartup")
endif()
