add_executable(echonul echonul.cpp main.cpp)
if (MSVC)
    target_link_options(echonul PRIVATE /entry:mainCRTStartup)
else()
    target_link_options(echonul PRIVATE -emainCRTStartup)
endif()

add_library(echofx${DETOURS_BITS} SHARED echofx.cpp echonul.cpp echofx.rc echofx.def)
target_link_libraries(echofx${DETOURS_BITS} ${DEPS})
set_target_properties(echofx${DETOURS_BITS} PROPERTIES OUTPUT_NAME "echofx${DETOURS_BITS}")
