add_executable(echonul echonul.cpp main.cpp)
if (MSVC)
    set_target_properties(echonul PROPERTIES LINK_FLAGS "/entry:mainCRTStartup")
else()
    set_target_properties(echonul PROPERTIES LINK_FLAGS "-emainCRTStartup")
endif()

add_library(echofx${DETOURS_BITS} SHARED echofx.cpp echonul.cpp echofx.rc echofx.def)
target_link_libraries(echofx${DETOURS_BITS} ${DEPS})
set_target_properties(echofx${DETOURS_BITS} PROPERTIES OUTPUT_NAME "echofx${DETOURS_BITS}")
