if (MSVC)
    add_executable(excep excep.cpp firstexc.cpp)
    target_link_libraries(excep ${DEPS})
    target_link_options(excep PRIVATE /entry:WinMainCRTStartup)
else()
    add_executable(excep excep.cpp firstexc.cpp)
    target_link_libraries(excep ${DEPS})
    target_link_options(excep PRIVATE -eWinMainCRTStartup)
endif()
