if (MSVC)
    add_executable(excep excep.cpp firstexc.cpp)
    target_link_libraries(excep ${DEPS})
    set_target_properties(excep PROPERTIES LINK_FLAGS "/entry:WinMainCRTStartup")
else()
    add_executable(excep excep.cpp firstexc.cpp)
    target_link_libraries(excep ${DEPS})
    set_target_properties(excep PROPERTIES LINK_FLAGS "-eWinMainCRTStartup")
endif()
